named as objects instead of integers.
- The clock server calls SMP to start threads. All thread global IDs are
assigned by the SMP class.
- Updated atomic for better performance on 64 bit machines.
- Added compare and exchange functions to atomic.h

Note: no parallel models tested yet. This is all infrastructure change.

Only include cctype on C++ compilations.

----------
spartha1    Date: Fri Mar 30 15:41:25 EDT 2007  CSN: CSN-asimcore-46
                  Fri Mar 30 19:41:25 UTC 2007


Directory lib/libawb
 model_builder.cpp         Locally Modified           45 

Updating with simcore changes (rev. 2256)

- supported handling of sym links in persist configure option.

----------
spartha1    Date: Fri Mar 30 15:44:04 EDT 2007  CSN: CSN-asimcore-47
                  Fri Mar 30 19:44:04 UTC 2007


Directory lib/libawb
 model_builder.cpp         Locally Modified           46 
 model_builder.h           Locally Modified           46 

Updating with simcore changes (rev. 2257)

- supported linking of directories with persist qualifier.
- persist option to model configure is functional now.

----------
spartha1    Date: Fri Mar 30 16:28:51 EDT 2007  CSN: CSN-asimcore-48
                  Fri Mar 30 20:28:51 UTC 2007


Directory .
 configure                 Locally Modified           47 
 Makefile.in               Locally Modified           47 
 configure.in              Locally Modified           47 
 Makefile.am               Locally Modified           47 

Updating with simcore changes (rev. 2258 and 2259)

- Fixed the perl Qt search path to look under .../lib64/... on SUSE64 with perl 5.8.7
instead of lib32, since that version of perl seems to be a true 64-bit binary.
- Added a make target "install-src-public" that does the same as "install-sc" but also
makes the installed source tree world-readable.

- look for PerlQt in either .../lib32/... or .../lib64/... depending
on whether you are on x86_64 or not, on SUSE.